[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/UI/HUD/BossOver.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/HUD/BossLost.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/HUD/BossCap.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/HUD/BossBackground.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/HUD/BossProgress.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/BossBar/BossBar.gd" type="Script" id=6]

[node name="BossBar" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 256, 264 )
texture = ExtResource( 4 )
centered = false

[node name="HpLost" type="TextureProgress" parent="."]
margin_right = 480.0
margin_bottom = 270.0
value = 57.0
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpProgress" type="TextureProgress" parent="."]
margin_right = 480.0
margin_bottom = 270.0
value = 21.0
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossOver" type="Sprite" parent="."]
position = Vector2( 64, 256 )
texture = ExtResource( 1 )
centered = false

[node name="BossName" type="Label" parent="."]
margin_top = 134.0
margin_right = 480.0
margin_bottom = 135.0
text = "Boss
"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LostTween" type="Tween" parent="."]

[node name="BossCap" type="Sprite" parent="."]
position = Vector2( 197, 264 )
texture = ExtResource( 3 )
centered = false
